resources/homepage/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: homepage
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  forwardAuth:
    address: http://authelia.security.svc.cluster.local/api/verify?rd=https://auth.k3s.gillouche.homelab
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
